Fix logo position on mobile

--- a/src/components/schools/sections/Hero/style.module.scss
+++ b/src/components/schools/sections/Hero/style.module.scss
@@ -135,7 +135,7 @@
   }
 
   .title {
-    transform: translateY(-35vh) scale(.15);
+    transform: translateY(calc(-30vh + 50px)) scale(.45);
   }
 
   .headline span,
